3chapter/functions/return-type-signature-required.err
error[E0308]: mismatched types
 --> ./return-type-signature-required.rs:3:5
  |
2 | fn plus_two(x: i32) {
  |                     - help: try adding a return type: `-> i32`
3 |     x + 2
  |     ^^^^^ expected `()`, found `i32`

error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> ./return-type-signature-required.rs:8:30
  |
2 | fn plus_two(x: i32) {
  | ------------------- defined here
...
8 |     println!("5 + 2 is: {}", plus_two());
  |                              ^^^^^^^^-- supplied 0 arguments
  |                              |
  |                              expected 1 argument

error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> ./return-type-signature-required.rs:8:30
  |
8 |     println!("5 + 2 is: {}", plus_two());
  |                              ^^^^^^^^^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required by `std::fmt::Display::fmt`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0061, E0277, E0308.
For more information about an error, try `rustc --explain E0061`.
